Changelog
=========


1.4 (unreleased)
----------------

- Add `objects` method to `UpgradeStep` for easy querying the catalog
  and doing stuff with progress logging combined.
  [jone]

- Make ProgressLogger an iterator too, because it is easier to use.
  [jone]

- Improve logging while installing upgrade steps.
  Show duration for installing.
  [jone]

- Fix upgrade step icons for Plone 4.3.
  [jone]

- Add ``update_security`` helper.
  [jone]

- Fix incomplete status info entry prodcued by
  placeful workflow policy activator.
  [jone]


1.3 (2013-06-13)
----------------

- Implement a placeful workflow policy activator.
  [jone]

- Added remove_broken_browserlayer method to step class.
  [lgraf]


1.2.1 (2013-04-23)
------------------

- Keep modification date on reindexObject wihtout idxs.
  [mathias.leimgruber]

1.2 (2013-01-24)
----------------

- onegov.ch approved: add badge to readme.
  [jone]

- Remove 'step' and 'for' values from internal data structure.
  This is needed for allowing us to serialize the data (json).
  [jone]

- Add IPostUpgrade adapter hook.
  [jone]

- Refactor dependency sorting into seperate function.
  [jone]

- Add security declarations.
  [jone]

- Fix wrong tool usage when installing a profile in step class.
  [jone]


1.1 (2012-10-08)
----------------

- Add catalog_unrestricted_get_object and catalog_unrestricted_search methods to step class.
  [jone]

- Handle profiles of packages which were removed but have leftover generic setup entries.
  [jone]


1.0 (2012-08-13)
----------------

- Add installed upgrades to transaction note. Closes #7
  [jone]

- Add ``migrate_class`` helper with _p_changed implementation supporting BTreeFolder2Base containers.
  [jone]

- Remove ``purge_resource_registries()`` helper because it does not behave as expected.
  [jone]

- Set min-height of upgrade output frame to 500px.
  [jone]

- Print exceptions to browser log stream.
  [jone]


1.0b2 (2012-07-04)
------------------
